# TunnelFiles

./: .gitignore  .impeccable.md  .prettierignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  SPEC.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tunnelFiles.pen  vite.config.ts  vitest.config.ts
.claude/rules/: backend.md  frontend.md  general.md  testing.md
.claude/skills/component-variants/: SKILL.md
.claude/skills/ui-refactor/: SKILL.md
.github/workflows/: ai-injection-nightly.yml  ci.yml  release.yml
Casks/: tunnelfiles.rb
__tests__/: setup.ts
__tests__/components/: AiHealthBadge.test.tsx  ChatInput.test.tsx  ChatPanel.test.tsx  ChatPanelLauncher.test.tsx  CodeBlock.test.tsx  InlineModelRow.deriveRowView.test.ts  MessageList.test.tsx
__tests__/components/connections/: ConnectionCard.test.tsx  ConnectionSheet.test.tsx  HostKeyDialog.test.tsx
__tests__/components/file-browser/: ChmodDialog.test.tsx  FileContextMenu.test.tsx  FileOperations.test.tsx  PermissionMatrix.test.tsx  StatusBar.test.tsx
__tests__/components/transfer/: TransferQueue.test.tsx
__tests__/components/ui/: UIComponents.test.tsx
__tests__/helpers/: invoke-router.ts  test-wrapper.tsx
__tests__/hooks/: useAiChat.test.tsx  useAiHealthCheck.test.tsx  useAiPlan.test.tsx  useConnect.test.tsx  useDropUpload.test.tsx  useFileList.test.tsx  useFileOperations.test.tsx  useFileSelection.test.tsx  useModelOnboarding.reducer.test.ts  useSettings.test.tsx  useTerminal.test.tsx  useTerminalDirectorySync.test.tsx  useTerminalEvents.test.tsx
__tests__/integration/: ai-runtime-bootstrap.test.tsx  connection-flow.test.tsx  file-browsing.test.tsx  session-management.test.tsx  transfer-flow.test.tsx
__tests__/lib/: ai.test.ts  error.test.ts  file-permissions.test.ts  inputSafetyWarnings.test.ts  parseMessageBlocks.test.ts  terminal-utils.test.ts
__tests__/mocks/: tauri.ts  xterm.ts
__tests__/pages/: SettingsPage.ai-disabled.test.tsx  SettingsPage.ai-tab.test.tsx
__tests__/stores/: useAiSessionStore.test.ts  useTransferStore.test.ts
docker/: docker-compose.yml  setup-test-env.sh
docker/nginx-test/: Dockerfile  entrypoint.sh
docker/ssh-keys/: .gitkeep
docker/ssh-server/: Dockerfile  entrypoint.sh
docs/: PRD.md  approved-model-sources.md  architecture.md  checkpoint-b-rubric.md  checkpoint-c-rubric.md  llama-cpp-golden-prompts.md  v0.3a-demo.md
docs/checkpoints/b/: cargo-tree-llama.txt  phase1-progress.md  result.md  waivers.md
docs/plans/: 2026-01-21-ssh-terminal-design.md  2026-01-21-ssh-terminal-impl.md
docs/tasks/: README.md  p0-foundation.md  p1-storage.md  p2-connection.md  p3-file-browse.md  p4-file-ops.md  p5-transfer.md  p6-settings.md  p7-ui.md  p8-integration.md  p9-dialog-to-page.md  status.yaml
docs/templates/: README.md  t-1-baseline-guide.md  v0.1-dogfood-log.md  v0.1-dogfood-retro.md
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  mod.rs  profile.rs  security.rs  session.rs  settings.rs  sftp.rs  terminal.rs  transfer.rs
src-tauri/src/models/: ai_events.rs  ai_health.rs  ai_plan.rs  ai_policy.rs  ai_probe.rs  ai_step.rs  error.rs  file_entry.rs  mod.rs  profile.rs  settings.rs  terminal.rs  transfer_task.rs
src-tauri/src/services/: mod.rs  security_service.rs  session_manager.rs  sftp_service.rs  storage_service.rs  terminal_manager.rs  transfer_manager.rs
src-tauri/src/services/ai/: allowlist.rs  chat.rs  checksum_cache.rs  context.rs  executor.rs  generate.rs  health.rs  llama_runtime.rs  mod.rs  model_download.rs  paths.rs  planner.rs  prompt.rs  rollback.rs  scrubber.rs
src-tauri/src/utils/: logging.rs  mod.rs  path_security.rs
src-tauri/tests/: e2e_nginx.rs  injection.rs  injection_nightly.rs  integration_tests.rs  llama_load_real.rs  model_contract.rs  scrubber_blackbox.rs  service_integration.rs  terminal_model_tests.rs
src/components/: EmptyState.tsx  ErrorBoundary.tsx  RecentConnections.tsx
src/components/ai/: AiHealthBadge.tsx  ChatInput.tsx  ChatPanel.tsx  ChatPanelLauncher.tsx  ConfirmWriteDialog.tsx  InlineModelRow.tsx  MessageList.tsx  ModelOnboardingDialog.tsx  PlanCard.tsx  PlanDiffViewer.tsx  RollbackButton.tsx
src/components/connections/: AuthTypeSelector.tsx  ConnectionCard.tsx  ConnectionItem.tsx  ConnectionListItem.tsx  ConnectionSheet.tsx  CoolConnectionRow.tsx  HostKeyDialog.tsx  HotConnectionTile.tsx  PasswordDialog.tsx  PasswordInput.tsx
src/components/file-browser/: Breadcrumb.tsx  FileIcon.tsx  (+13 more)
src/hooks/: useAiChat.ts  useAiHealthCheck.ts  useAiPlan.ts  useColumnWidths.ts  useConnect.ts  useDeleteProgress.ts  useDropUpload.ts  useFileList.ts  useFileOperations.ts  useFileSelection.ts  useKnownHosts.ts  useModelOnboarding.ts  useProfiles.ts  useRecentConnections.ts  useSearchFilter.ts  useSessionStatus.ts  useSettings.ts  useTerminal.ts  useTerminalDirectorySync.ts  useTerminalEvents.ts  useTerminalRenderer.ts  useToast.ts  useTransferEvents.ts  useTransferHistory.ts
src/layouts/: MainLayout.tsx
src/lib/: ai.ts  error.ts  file.ts  index.ts  inputSafetyWarnings.ts  parseMessageBlocks.ts  platform.ts  profile.ts  query.ts  session.ts  settings.ts  sftp.ts  terminal-perf.ts  terminal-utils.ts  terminal.ts  theme.tsx  transfer.ts  validation.ts
src/pages/: ConnectionFormPage.tsx  ConnectionsPage.tsx  FileManagerPage.tsx  NotFoundPage.tsx  SettingsPage.tsx
src/stores/: useAiSessionStore.ts  useTransferStore.ts
src/types/: binding-checks.ts  error.ts  events.ts  file.ts  index.ts  profile.ts  settings.ts  terminal.ts  transfer.ts
tasks/: todo.md
test/e2e/: run-e2e.mjs  tsconfig.json  wdio.conf.ts  wdio.visual.conf.ts
(+113 files in other folders)
