[package]
name = "tunnelfiles"
version = "3.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tunnelfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH 连接
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 工具库
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 压缩
zip = "2"

# 系统安全存储
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# 路径处理
dirs = "5"

# 加密/编码
sha2 = "0.10"
base64 = "0.22"

# 安全内存清零
zeroize = "1"

# 凭证 scrubber 正则匹配（SPEC §7 Ask First 新依赖：
# regex 1.12 已经以传递依赖存在于 Cargo.lock，升级为直接依赖无新依赖树影响）
regex = "1"

# AI 推理运行时（SPEC §5 T1.3，Ask First 已批准 2026-04-17）。
# 严格 pin 版本防 bundled llama.cpp 升级回归（SPEC §5 llama-cpp-2 pin 说明）。
# Feature 白名单：macOS → metal；Windows/Linux → default（CPU）。
# 禁用的 upstream 默认 features：openmp / android-shared-stdcxx（SPEC §7 Never）。
# CUDA / Vulkan / ROCm 严禁启用（SPEC §7 Never "llama.cpp backend whitelist 外"）。
# 系统先决条件：cmake（README "系统先决条件" 节）。
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.143", default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.143", default-features = false }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

