[package]
name = "tunnelfiles"
version = "3.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tunnelfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH 连接
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 工具库
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 压缩
zip = "2"

# 系统安全存储
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# 路径处理
dirs = "5"

# 加密/编码
sha2 = "0.10"
base64 = "0.22"

# AI 模型下载（SPEC §5 T1.5，Ask First 已批准 2026-04-18）。
# Feature 白名单：rustls-tls（纯 Rust，避免 OpenSSL 系统依赖）/ stream（Range resume + 进度
# 回调）/ http2（HuggingFace 直链走 HTTP/2）/ gzip（服务端可能启用传输编码）。
# 禁用 default-features（排除 native-tls / cookies / blocking 等不需要的 features）。
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "http2",
    "gzip",
] }

# 跨平台磁盘可用空间查询（SPEC §5 T1.5 下载前 7GB gate）。
# 选型论证：fs4 维护活跃（2024 更新），内部封装 libc::statvfs + Windows API，
# 避免手写 cfg-gated FFI；单一职责，依赖树极小。
fs4 = "0.12"

# 异步字节流 trait（reqwest::Response::bytes_stream 返回 futures Stream）
# 已通过 [dev-dependencies] 引入，这里升级到生产路径。
futures-util = "0.3"

# 安全内存清零
zeroize = "1"

# 凭证 scrubber 正则匹配（SPEC §7 Ask First 新依赖：
# regex 1.12 已经以传递依赖存在于 Cargo.lock，升级为直接依赖无新依赖树影响）
regex = "1"

# 平台 RAM 探测（macOS sysctlbyname + Linux /proc/meminfo）。
# libc 已作为多个上游依赖（ssh2、tauri、llama-cpp-sys-2）的传递依赖存在，
# 升级为直接依赖无新依赖树影响。
libc = "0.2"

# UTF-8 流式解码（LlamaTokenLoop 跨 token 边界拼字节 → str）。
# encoding_rs 已经以传递依赖存在于 llama-cpp-2，升级为直接依赖无新依赖树影响。
encoding_rs = "0.8"

# Shell 命令 AST 解析（SPEC §5 T2.2，Ask First 已批准）。
# tree-sitter-bash 0.21 对应 tree-sitter 0.22 API（language() fn）。
# 严格 pin 防 bash grammar 升级破坏 deny-node-kinds 集合。
tree-sitter = "=0.22.6"
tree-sitter-bash = "=0.21.0"

# AI 推理运行时（SPEC §5 T1.3，Ask First 已批准 2026-04-17）。
# 严格 pin 版本防 bundled llama.cpp 升级回归（SPEC §5 llama-cpp-2 pin 说明）。
# Feature 白名单：macOS → metal；Windows/Linux → default（CPU）。
# 禁用的 upstream 默认 features：openmp / android-shared-stdcxx（SPEC §7 Never）。
# CUDA / Vulkan / ROCm 严禁启用（SPEC §7 Never "llama.cpp backend whitelist 外"）。
# 系统先决条件：cmake（README "系统先决条件" 节）。
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.143", default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.143", default-features = false }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

